--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "nextJS app",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "node server/index.js"
   },
   "repository": "https://github.com/seanruhland/nextJSphoto.git",
   "author": "Sean Ruhland",
   "license": "MIT",
   "dependencies": {
     "@zeit/next-sass": "^0.2.0",
+    "express": "^4.16.3",
     "next": "^6.1.1",
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
